--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </head>
 
 <body>
-    <div class="container mt-5">
+    <div class="container"
+        style="border:1px dashed #ccc; border-radius: 20px; margin: 50px auto; padding: 50px;background-color: #FEFEFE;">
         <div class="media mb-5">
             <img class="align-self-start mr-4 rounded-circle" src="img/socheatyorn-photo.jpg" width="140"
                 alt="Socheat Yorn Photo">
