--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 <body>
     <div class="container"
         style="border:1px dashed #ccc; border-radius: 20px; margin: 150px auto; padding: 50px;background-color: #FEFEFE;">
-        <div class="media mb-5">
-            <img class="align-self-start mr-4 rounded-circle" src="img/socheatyorn-photo.jpg" width="140"
-                alt="Socheat Yorn Photo">
-            <div class="media-body">
-                <h1 class="mt-3">Socheat Yorn</h1>
+        <div class="row mb-5">
+            <div class="col-12 col-md-3">
+                <img class="align-self-start mr-4 rounded-circle" src="img/socheatyorn-photo.jpg" width="160"
+                    alt="Socheat Yorn Photo">
+            </div>
+            <div class="col-12 col-md-9">
+                <h1 class="mt-4">Socheat Yorn</h1>
                 <p class="text-gray">Full Stack Developer<br />7+ Years Experiences</p>
                 <p></p>
             </div>
