update mobile version

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Socheat Yorn's Resume</title>
 </head>
 
-<body>
+<body style="margin-left: 5px; margin-right:5px;">
     <div class="container"
         style="border:1px dashed #ccc; border-radius: 20px; margin: 150px auto; padding: 50px;background-color: #FEFEFE;">
         <div class="row mb-5">
