--- a/index.html
+++ b/index.html
@@ -19,25 +19,23 @@
     <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#ffffff">
 
     <script src="https://kit.fontawesome.com/3ac68c8400.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
     <title>Socheat Yorn's Resume</title>
 </head>
 
 <body style="margin-left: 5px; margin-right:5px;">
-    <div class="container"
+    <main class="container"
         style="border:1px dashed #ccc; border-radius: 20px; margin: 150px auto; padding: 50px;background-color: #FEFEFE;">
-        <div class="row mb-5">
-            <div class="col-12 col-md-3">
-                <img class="align-self-start mr-4 rounded-circle" src="img/socheatyorn-photo.jpg" width="160"
-                    alt="Socheat Yorn Photo">
+        <header class="row g-0 rounded overflow-hidden flex-md-row mb-4 h-md-250 position-relative">
+            <div class="col-auto d-none d-lg-block">
+                <img class="align-self-start mr-4 w-100 rounded-circle" src="img/socheatyorn-photo.jpg" width="160" alt="Socheat Yorn's Profile Photo">
             </div>
-            <div class="col-12 col-md-9">
-                <h1 class="mt-4">Socheat Yorn</h1>
-                <p class="text-gray">Full Stack Developer<br />7+ Years Experiences</p>
-                <p></p>
+            <div class="col p-4 d-flex flex-column position-static">
+                <h1 class="mt-4 mb-0">Socheat Yorn</h1>
+                <p class="text-gray"><strong>Full Stack Developer - PHP Laravel & JavaScript</strong><br />10<sup>+</sup> Years Experiences</p>
             </div>
-        </div>
+        </header>
         <div class="row">
             <div class="col-12 col-md-9">
                 <div class="main-item pr-3 mb-5" id="profile"></div>
@@ -67,6 +65,7 @@
     </div>
 
     <script src="js/app.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
