Update resume early 2025

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col p-4 d-flex flex-column position-static">
                 <h1 class="mt-4 mb-0">Socheat Yorn</h1>
-                <p class="text-gray"><strong>Full Stack Developer - PHP Laravel & JavaScript</strong><br />10<sup>+</sup> Years Experiences</p>
+                <p class="text-gray"><strong>Full Stack Developer - PHP Laravel, ExpressJs, Roby on Rail</strong><br />10<sup>+</sup> Years Experiences</p>
             </div>
         </header>
         <div class="row">
@@ -47,9 +47,6 @@
             <div class="col-12 col-md-3">
                 <div class="main-item" id="details">
                     <h5>Details</h5>
-                </div>
-                <div class="main-item" id="hobits">
-                    <h5 class="mt-5">Hobits</h5>
                 </div>
                 <div class="main-item" id="links">
                     <h5 class="mt-5">Links</h5>
